--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8090
 
 # DataBase
-spring.datasource.url=jdbc:mysql://localhost:3306/SimbirSoft_2021?useUnicode=true&useSSL=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/SimbirSoft_2021_2?useUnicode=true&useSSL=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 #spring.datasource.password=root
 
@@ -22,7 +22,7 @@ spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 
 # liquibase
-spring.liquibase.enabled=false
+spring.liquibase.enabled=true
 spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
 
 
